@startuml 03_propagator

title Propagator - Hierarchy

abstract class EquationsOfMotion {
  +eom(t, state, args) : array
}

class CR3BPDynamics {
  +eom(t, state, args) : array
}

EquationsOfMotion <|-- CR3BPDynamics

note right of CR3BPDynamics
  Today's (and currently only) dynamical
  model. Pulled out as its own hierarchy so
  future models (two-body, ephemeris, etc.)
  can be added as additional
  EquationsOfMotion subclasses without
  touching Propagator at all.
end note

abstract class Propagator {
  -eom : EquationsOfMotion
  -propagate_arc(X0, U, t0, t1, prop_length) : array
  +propagate(inputs, problem_def) : (TrajectoryState, ErrorDynamics?)
}

class StatePropagator {
  +propagate(inputs, problem_def) : (TrajectoryState, None)
}

class SensitivityPropagator {
  -propagate_arc_dX0 : <jacfwd(propagate_arc, argnums=0)>
  -propagate_arc_dU : <jacfwd(propagate_arc, argnums=1)>
  -fwd_iterate : <prepared iterator fn>
  -bwd_iterate : <prepared iterator fn>
  +propagate(inputs, problem_def) : (TrajectoryState, ErrorDynamics)
}

Propagator <|-- StatePropagator
Propagator <|-- SensitivityPropagator
Propagator o-- EquationsOfMotion : eom

note right of Propagator
  propagate_arc(X0, U, t0, t1, prop_length) is
  the building-block: integrates ONE arc via
  diffrax, using self.eom.eom() as the ODE
  right-hand side. This is the per-arc
  function used while constructing the
  problem (today's "propagator_e").

  propagate(inputs, problem_def) - the FULL
  TRAJECTORY - calls propagate_arc()
  repeatedly via fwd_iterate (forward from X0
  across arcs to the midpoint) and
  bwd_iterate (backward from Xf across arcs to
  the midpoint), assembling TrajectoryState
  (X_hst, t_hst, t_node_bound).
end note

note right of StatePropagator
  Pure state propagation - forward/backward
  to the midpoint via propagate_arc(), no
  sensitivities. Used by DeterministicTOP.
end note

note right of SensitivityPropagator
  State + first-order sensitivity propagation
  - produces TrajectoryState AND ErrorDynamics
  (A_hst, B_hst, A_arc_hst, B_arc_hst; H_hst/
  P_v_hst/K_arc_hst/G_exe_arc_hst left
  zero-filled for later steps to fill - see
  01_data_structures.puml). Used by
  StochasticTOP.

  A/B sensitivities are obtained via
  jax.jacfwd of propagate_arc() w.r.t. (X0, U)
  - NOT by integrating separate variational/
  STM equations alongside the state.
  propagate_arc_dX0/dU are prepared
  (jacfwd-wrapped) once at construction, then
  vmapped: across sub-arcs for A_hst/B_hst,
  across arcs for A_arc_hst/B_arc_hst.

  fwd_iterate/bwd_iterate are prepared once at
  construction time (what prepare_prop_funcs()
  does today), reused on every evaluate() call.
end note

note bottom of Propagator
  Unlike GainParameterization/
  FeedbackControlMethod, this is NOT an
  independently-configurable axis - the
  pairing is fixed 1:1 by problem type
  (DeterministicTOP always uses
  StatePropagator, StochasticTOP always uses
  SensitivityPropagator). Modeled as its own
  class for separation of concerns (numerical
  integration vs. NLP problem assembly) and as
  the natural home for propagate_arc() and the
  prepared integration functions - not for
  mix-and-match flexibility.
end note

@enduml
